Fix build: use npx react-scripts

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest  # Linux VM
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm run build
+        run: npx react-scripts build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
