--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
+    "web-vitals": "^2.1.4",
     "gh-pages": "^6.3.0"
   },
   "scripts": {
